fix AlertBox2 icon alignment

--- a/src/AlertBox2/AlertBox2.less
+++ b/src/AlertBox2/AlertBox2.less
@@ -43,8 +43,7 @@
   }
 
   &--icon--support {
-    width: 1.25rem; // 20px
-    vertical-align: top;
+    color: @alert_red;
   }
 }
 
